k8s/base/workloads/feed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-service
  labels:
    app: feed-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed-service
  template:
    metadata:
      labels:
        app: feed-service
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: feed-service
      containers:
      - name: feed-service
        image: feed-service:latest
        ports:
        - containerPort: 50052
          name: grpc
          protocol: TCP
