k8s/base/workloads/feed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feed-service
  labels:
    app: feed-service
spec:
  type: ClusterIP
  ports:
  - port: 50052
    targetPort: 50052
    protocol: TCP
    name: grpc
  selector:
    app: feed-service
