k8s/base/workloads/feed/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: feed-authz
spec:
  selector:
    matchLabels:
      app: feed-service
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/bff-service
